Facebook form validation update + scrollbar styling fixes

--- a/src/styles/layout/_scrollbar.scss
+++ b/src/styles/layout/_scrollbar.scss
@@ -1,23 +1,31 @@
 @import 'src/styles/abstract/colors';
 
-// Customize scrollbar like macOS; not supported in Firefox and IE
-body {
-  &::-webkit-scrollbar { // sass-lint:disable-line no-vendor-prefixes
-    background-color: $color-white;
-    width: 16px;
+// Customize scrollbar like macOS for Windows; not supported in Firefox and IE
+::-webkit-scrollbar { // sass-lint:disable-line no-vendor-prefixes
+  background-color: $color-white;
+  width: 16px;
+}
+
+::-webkit-scrollbar-track { // sass-lint:disable-line no-vendor-prefixes
+  background-color: $color-white;
+}
+
+::-webkit-scrollbar-thumb { // sass-lint:disable-line no-vendor-prefixes
+  background-color: $color-french-gray;
+  border-radius: 16px;
+  border: 4px solid $color-white;
+}
+
+::-webkit-scrollbar-button { // sass-lint:disable-line no-vendor-prefixes
+  display: none;
+}
+
+::-webkit-scrollbar-track-piece { // sass-lint:disable-line no-vendor-prefixes
+  &:start {
+    background: transparent url('/assets/misc/scrollbar.png') repeat-y !important; // sass-lint:disable-line no-important
   }
 
-  &::-webkit-scrollbar-track { // sass-lint:disable-line no-vendor-prefixes
-    background-color: $color-white;
-  }
-
-  &::-webkit-scrollbar-thumb { // sass-lint:disable-line no-vendor-prefixes
-    background-color: $color-french-gray;
-    border-radius: 16px;
-    border: 4px solid $color-white;
-  }
-
-  &::-webkit-scrollbar-button { // sass-lint:disable-line no-vendor-prefixes
-    display: none;
+  &:end {
+    background: transparent url('/assets/misc/scrollbar.png') repeat-y !important; // sass-lint:disable-line no-important
   }
 }
